practicaIPTABLES
# Generated by iptables-save v1.4.7 on Wed Sep 30 12:08:59 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:122]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Guardamos log de trafico icmp de entrada.
-A INPUT -p icmp -j LOG --log-prefix "Trafico ICMP de input -> " 
-A INPUT -d 10.110.3.0/24 -i eth0 -p icmp -m state --state NEW -j DROP 
#No permitimos El tráfico ICMP de entrada que no sea de la red 
#interna.
-A INPUT -i eth0 -p icmp -m state --state NEW -j DROP 
#No permitmos acceso desde pcs que no sean de la red interna a
# los puertos 22,23,80.
-A INPUT -i eth0 -p tcp -m state --state NEW -m multiport --dports 80,22,23 -j DROP 
#No esta prmitido el acceso a rapidshare desde el pc.
-A INPUT -d 10.11.12.13/32 -m state --state NEW -j DROP 
#Bloqueo del trafico FTP.
-A INPUT -p tcp -m state --state NEW -m multiport --dports 20,21 -j DROP 
#No se permite trafico de correo entre los pcs y los servidores 
#de google(Entrada).
-A INPUT -s 64.233.164.0/24 -p tcp -m state --state NEW -m multiport --sports 25,110 -j DROP 
-A INPUT -s 74.125.206.0/24 -p tcp -m state --state NEW -m multiport --sports 25,110 -j DROP 
-A INPUT -s 74.125.200.0/24 -p tcp -m state --state NEW -m multiport --sports 25,110 -j DROP 
-A INPUT -s 74.125.23.0/24 -p tcp -m state --state NEW -m multiport --sports 25,110 -j DROP 
-A INPUT -s 173.194.72.0/24 -p tcp -m state --state NEW -m multiport --sports 25,110 -j DROP 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
# Guardamos log de trafico icmp de forward
-A FORWARD -p icmp -j LOG --log-prefix "Trafico ICMP de forward -> " 
#Solo permitimos que la terminal conteste a la pasarela ICMP.
-A FORWARD -i eth0 -p icmp -m state --state NEW -j DROP 
-A FORWARD -o eth1 -p icmp -m state --state NEW -j DROP 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
# Guardamos log de trafico icmp de salida. 
-A OUTPUT -p icmp -j LOG --log-prefix "Trafico ICMP de output -> " 
##No se permite trafico de correo entre los pcs y los servidores 
#de google(Salida).
-A OUTPUT -d 173.194.72.0/24 -p tcp -m state --state NEW -m multiport --dports 25,110 -j DROP 
-A OUTPUT -d 74.125.23.0/24 -p tcp -m state --state NEW -m multiport --dports 25,110 -j DROP 
-A OUTPUT -d 74.125.200.0/24 -p tcp -m state --state NEW -m multiport --dports 25,110 -j DROP 
-A OUTPUT -d 74.125.206.0/24 -p tcp -m state --state NEW -m multiport --dports 25,110 -j DROP 
-A OUTPUT -d 64.233.164.0/24 -p tcp -m state --state NEW -m multiport --dports 25,110 -j DROP 
COMMIT
# Completed on Wed Sep 30 12:08:59 2015
# Generated by iptables-save v1.4.7 on Wed Sep 30 12:08:59 2015
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [260:15913]
:OUTPUT ACCEPT [260:15913]
#Redireccion de trafico de prerouting del servidor de 
#www.google.com al servidor de www.redes.dis.ulpgc.es
-A PREROUTING -d 130.206.193.27/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.31/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.35/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.37/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.38/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.42/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.46/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.48/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.49/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.53/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.57/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.59/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.16/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.20/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.24/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A PREROUTING -d 130.206.193.26/32 -p tcp -j DNAT --to-destination 193.145.147.22 
#Redireccion de trafico de output del servidor de 
#www.google.com al servidor de www.redes.dis.ulpgc.es
-A OUTPUT -d 130.206.193.27/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.31/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.35/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.37/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.38/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.42/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.46/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.48/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.49/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.53/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.57/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.59/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.16/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.20/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.24/32 -p tcp -j DNAT --to-destination 193.145.147.22 
-A OUTPUT -d 130.206.193.26/32 -p tcp -j DNAT --to-destination 193.145.147.22 

# Todo el tráfico DNS dirigido a la direccion IP 193.145.147.60

-A PREROUTING -p udp -m udp --dport 53 -j DNAT --to-destination 193.145.147.60 
-A OUTPUT -p udp -m udp --dport 53 -j DNAT --to-destination 193.145.147.60 

COMMIT
# Completed on Wed Sep 30 12:08:59 2015
